<resources>
    <string name="app_name">BMUN-Guide-Android</string>

    <string name="hello_blank_fragment">Empty</string>
    <string name="del_guide">Guide</string>
    <string name="committees">About</string>
    <string name="flashcards">Flashcards</string>
    <string name="info">Info</string>
    <string name="connect">Connect</string>
    <string name="test">THIS IS A TEST FRAGMENT</string>
    <string name="test2">THIS IS ANOTHER EQUALLY TRIVIAL TEST</string>
    <string name="research_cardview_contents">Research</string>
</resources>
