<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/guide"
        android:title="@string/del_guide"
        android:icon="@drawable/ic_baseline_book_24px"/>
    <item
        android:id="@+id/about"
        android:title="@string/committees"
        android:icon="@drawable/ic_baseline_gavel_24px"/>
    <item
        android:id="@+id/cards"
        android:title="@string/flashcards"
        android:icon="@drawable/ic_baseline_aspect_ratio_24px"/>
    <item
        android:id="@+id/information"
        android:title="@string/info"
        android:icon="@drawable/ic_baseline_attach_money_24px"/>
    <item
        android:id="@+id/connect"
        android:title="@string/connect"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24px"/>
</menu>